# visionero

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  run.py
app/: lifespan.py  main.py  notepad.py
app/core/: config.py  file_writer.py  logging.py  process_data.py  templates.py
app/dependens/: metrics.py
app/router/: router_system.py  system.py
app/schemes/: scheme_data.py
app/tests/: conftest.py  test_api.py
app/web/: web_router.py
app/web/static/js/: script.js
app/web/static/style/: style.css
app/web/templates/: index.html
app/websocket/: connection_manager.py  ws_router.py
scripts/: source_generator.py
