[project]
name = "visionero"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Golebev",email = "pavel_golubev93@inbox.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
