[project]
name = "visionero"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Golebev",email = "pavel_golubev93@inbox.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "websockets (>=16.0,<17.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "httpx2 (>=2.4.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
